fix: update size and alignment of cards while allowing height to expand

--- a/packages/website/styles/blog.css
+++ b/packages/website/styles/blog.css
@@ -39,6 +39,19 @@ h6 {
   }
 }
 
+.card-thumb {
+  aspect-ratio: 16/9;
+}
+
+@supports not (aspect-ratio: auto) {
+  .card-thumb {
+    padding-top: 100%;
+    height: 0;
+    position: relative;
+    overflow: hidden;
+  }
+}
+
 .blog .w-card {
   width: var(--card-size);
 }
@@ -334,10 +347,6 @@ h6 {
 
   .blog-tags-buttons {
     justify-self: center;
-  }
-  .blog .button-tags-container {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 }
 
